feat: Added links of social media
Signed-off-by: Pavel Buzakov <paulbuzakov@samurai-os-laptop.local>

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,13 +13,13 @@ const today = new Date();
         easy to use.
       </p>
 	  <div class="flex gap-3 mt-3">
-		<a href="https://linkedin.com/your-linkedin" target="_blank">
+      <a href=="/linkedin" target="_blank">
 			<Icon name="radix-icons:linkedin-logo" class="w-5 h-5 text-gray-600 hover:text-gray-500 dark:text-neutral-200"/>
 		</a>
-		<a href="https://www.github.com/eAntillon" target="_blank">
+		<a href="/github" target="_blank">
 			<Icon name="radix-icons:github-logo" class="w-5 h-5 text-gray-600 hover:text-gray-500 dark:text-neutral-200"/>
 		</a>
-		<a href="https://www.instagram.com/" target="_blank">
+		<a href="/instagram" target="_blank">
 			<Icon name="radix-icons:instagram-logo" class="w-5 h-5 text-gray-600 hover:text-gray-500 dark:text-neutral-200"/>
 		</a>
 		
@@ -45,6 +45,6 @@ const today = new Date();
     </div>
   </div>
   <p class="text-sm font-medium mb-10">
-    &copy; {today.getFullYear()} Your name here. All rights reserved.
+    &copy; {today.getFullYear()} Paul Buzakov. All rights reserved.
   </p>
 </footer>
